dfs, bfs, dijkstra 정리

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,6 @@ project(ps)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(algorithms)
-
 add_executable(ps
-        main.cpp
+        1916.cpp
 )
