--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(ps
         algorithms/graph.hpp
         algorithms/math.hpp
-        "01000/1956 - 운동.cpp"
+        "solving/2467 - 용액.cpp"
 )
