solve: 1197 - 최소 스패닝 트리

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,7 @@ add_executable(ps
     "algorithms/math.hpp"
     "algorithms/search.hpp"
     "algorithms/math/berlekamp_massey.hpp"
+    "algorithms/graph/kruskal.hpp"
+    "algorithms/graph/prim.hpp"
+    "algorithms/graph/weighted_edge.hpp"
 )
