solve: 10999 - 구간 합 구하기 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ add_executable(ps
     "algorithms/math.hpp"
     "algorithms/search.hpp"
     "solving/14860 - GCD 곱/14860 - GCD 곱.cpp"
+    "solving/10999 - 구간 합 구하기 2/10999 - 구간 합 구하기 2.cpp"
 )
