--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ add_executable(ps
     "algorithms/graph.hpp"
     "algorithms/math.hpp"
     "algorithms/search.hpp"
-    "solving/12865 - 평범한 배낭/12865 - 평범한 배낭.cpp"
+    "solving/25448 - N의 배수 (4)/25448 - N의 배수 (4).cpp"
 )
