--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ add_executable(ps
     "algorithms/math.hpp"
     "algorithms/search.hpp"
     "solving/25448 - N의 배수 (4)/25448 - N의 배수 (4).cpp"
+    "solving/1492 - 합/1492 - 합.cpp"
 )
